fixed stretching icons and margins on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -132,7 +132,6 @@ h1, h2, h3, h4, h5, h6, .header-font {
 .icon-small {
     display: inline;
     height: 20px;
-    width: 20px;
     filter:brightness(0%);
     margin-left: 5px;
     margin-right: 5px;
@@ -189,6 +188,9 @@ h1, h2, h3, h4, h5, h6, .header-font {
     }
     .icon-small {
         height: 40px;
+    }
+    .margined-small {
+        margin: 0.25rem;
     }
 }
 
